@@ -8,15 +8,6 @@ LUFI=script/lufi
 locales:
 	$(XGETTEXT) $(EXTRACTDIR) -o $(POT) 2>/dev/null
 
-push-locales: locales
-	zanata-cli -q -B push --errors --project-version `git branch | grep \* | cut -d ' ' -f2-`
-
-pull-locales:
-	zanata-cli -q -B pull --min-doc-percent 50 --project-version `git branch | grep \* | cut -d ' ' -f2-`
-
-stats-locales:
-	zanata-cli -q stats --project-version `git branch | grep \* | cut -d ' ' -f2-`
-
 podcheck:
 	podchecker lib/Lufi/DB/File.pm lib/Lufi/DB/Slice.pm
 
